--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
 export CELERY_BROKER_URL="redis://:password@localhost:6379/0"
 export CELERY_RESULT_BACKEND="db+postgresql+psycopg2://user:password@localhost:5432/db"
 export PG_PASSWORD="password"
+export PYTHONPATH="path to repository"
